# Projetos2026

flask_html/: app.py  pyproject.toml
flask_html/static/css/: style.css
flask_html/static/js/: script.js
flask_html/templates/: index.html  sobre.html
jinja2_test/: app.py  pyproject.toml
jinja2_test/static/css/: style.css
jinja2_test/static/js/: script.js
jinja2_test/templates/: base.html  index.html
meu-projeto-flask/: pyproject.toml
rpg-game/: pyproject.toml
rpg-game/src/rpg_game/: assasino.py  gereciador_jogo.py  guerreiro.py  mago.py  personagem.py
